<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"
        />


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/account"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:background="#ffffff"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#EC430D"
        android:text="@string/login"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"
            />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#EC430D"
            android:text="@string/register"
            />

</LinearLayout>
</LinearLayout>
